k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: watch-cluster
  labels:
    app: watch-cluster
